--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,11 @@ body{
     margin: 0;
     background-color: rgb(44, 43, 43);
 }
-
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 h1{
     color: white;
     text-align: center;
@@ -25,6 +29,8 @@ h1{
     align-items: center;
     height: 90vh;
     border: 5px solid white;
+    width: fit-content;
+    padding: 100px;
 }
 
 .form form{
