--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,12 @@
 body{
     padding: 0;
     margin: 0;
-    background-color: rgb(44, 43, 43);
+    background: linear-gradient(0deg,rgba(40, 40, 51, 1) 0%, rgba(8, 6, 6, 1) 100%);
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
 }
 main{
     display: flex;
@@ -27,13 +32,15 @@ h1{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 90vh;
     border: 5px solid white;
     width: fit-content;
-    padding: 100px;
+    padding: 6rem;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    border: 1px solid #434355;
+    border-radius: 1vh;
 }
 
-.form form{
+.form{
     display: flex;
     flex-direction: column;
     justify-content: left;
@@ -50,6 +57,19 @@ form .form .terms{
     display: flex; 
 }
 
+.form button{
+    padding: 10px;
+    margin: 10px;
+    border-radius: 5px;
+    border: none;
+    width: 100%;
+    background-color: rgb(187, 19, 19);
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    margin-left: 0px;
+}
+
 label{
     color: white;
 }
@@ -59,10 +79,38 @@ a{
 }
 
 .sign_in{
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid #434355;
+}
+
+.sign_in .sign_in_card{
+    border: 1px solid #434355;
+    border-radius: 5px;
+    margin-top: 2rem;
     display: flex;
     flex-direction: column;
     justify-items: center;
     justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding-left: 2vh;
+    padding-right: 2vh;
+}
+
+.sign_in .sign_in_card p{
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 10px;
+    text-align: center;
+}
+
+.sign_in .sign_in_card a{
+    color: rgb(187, 19, 19);
+    text-decoration: none;
+    font-weight: bold;
+    text-align: center;
 }
 
 input[type="text"], input[type="email"], input[type="password"]{
@@ -72,4 +120,10 @@ input[type="text"], input[type="email"], input[type="password"]{
     border: none;
     width: 300px;
     background-color: rgba(43, 18, 18, 0.432);
+    color: white;
+}
+
+img{
+    width: 40px;
+    height: 48px;
 }
